    * 4306 FIX: cisco_fru_power: fixed empty FRU current handling
    * 4333 FIX: tsm_storage_pools: fixed incomplete data handling
    * 4343 FIX: apt: Fixed wrong state information of pending updates of normal and security updates...
    * 4344 FIX: lnx_quota: Fixed wrong value calculation and removed performance data...
            NOTE: Please refer to the migration notes!

    Multisite:
    * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
    * 4229 New Web GUI logging configuration...
    * 4011 Quicksearch: Introduced new filters tg, ad and al...
    * 4279 Performance snapins: Added site selection field to all performance snapins
    * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
    * 4004 FIX: Fixed exception when viewing availability of BI aggregations...
    * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
    * 4145 FIX: Fixed exception when setting output_format in wrong case
    * 4220 FIX: WATO folder filter: improve output of unknown folders
    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
    * 4228 FIX: Context links to HW/SW inventory views are only shown when useful
    * 4280 FIX: Interactive login is now denied for automation users...
    * 4307 FIX: Fixed wrong filters in Eventviews linked by Tactical Overview
    * 4282 FIX: Fixed rendering of perfometers when no RRDs exist yet
    * 4285 FIX: Availability: Timeline tables can now not be sorted and searched anymore
    * 4015 FIX: Multisite events page: Fixed slow page generation caused by the event delete icon...
    * 4315 FIX: Logwatch problematic logfiles list was showing too many logfiles
    * 4316 FIX: Views: Fixed editing of "hide from sidebar" and "show context button" options

    WATO:
    * 4142 New extended search dialog for rulesets and rules...