@@ -54,64 +54,53 @@ def inventory_perle_cm_modules(info):
     for name, led, index, \
         fiber_lprf, fiber_link, fiber_conn, fiber_speed, \
         cooper_lprf, copper_link, copper_conn, copper_speed in info:
-        inventory.append(("%s %s" % (index, name), None))
+        inventory.append( (index, None) )
     return inventory
 
 
 def check_perle_cm_modules(item, _no_params, info):
-    mappings = {
-        "led" : {
-            "0" : (2, "no power"),
-            "1" : (0, "power to the module"),
-            "2" : (0, "loopback enabled"),
-        },
-        "fiber_lprf" : {
-            "0"  : (0, "ok"),
-            "1"  : (2, "offline"),
-            "2"  : (2, "link fault"),
-            "3"  : (2, "auto neg error"),
-            # available for cm1110 modules
-            "99" : (2, "not applicable"),
-        },
-        "fiber_link" : {
-            "0" : (1, "down"),
-            "1" : (0, "up"),
-        },
-        "fiber_conn" : {
-            "0" : "sc",
-            "1" : "lc",
-            "2" : "st",
-            "3" : "sfp",
-            "5" : "fc",
-            "6" : "mtrj",
-        },
-        "copper_lprf" : {
-            "0" : (0, "ok"),
-            "1" : (2, "remote fault"),
-        },
-        "copper_link" : {
-            "0" : (1, "down"),
-            "1" : (0, "ok"),
-        },
-        "copper_conn" : {
-            "0" : "rj45"
-        },
-    }
+    mappings = { "speed" : { "0" : "10 Mbs",
+                             "1" : "100 Mbps",
+                             "2" : "1000 Mbps", },
+                 "power_led" : { "0" : (2, "no power"),
+                                 "1" : (0, "power to the module"),
+                                 "2" : (0, "loopback enabled"), },
+                 "fiber_lprf" : { "0"  : (0, "ok"),
+                                  "1"  : (2, "offline"),
+                                  "2"  : (2, "link fault"),
+                                  "3"  : (2, "auto neg error"),
+                                  # available for cm1110 modules
+                                  "99" : (2, "not applicable"), },
+                 "fiber_link" : { "0" : (1, "down"),
+                                  "1" : (0, "up"), },
+                 "fiber_connector" : { "0" : "sc",
+                                       "1" : "lc",
+                                       "2" : "st",
+                                       "3" : "sfp",
+                                       "5" : "fc",
+                                       "6" : "mtrj", },
+                 "copper_lprf" : { "0" : (0, "ok"),
+                                   "1" : (2, "remote fault"), },
+                 "copper_link" : { "0" : (1, "down"),
+                                   "1" : (0, "ok"), },
+                 "copper_connector" : { "0" : "rj45", }, }
 
-    for name, led, index, \
-        fiber_lprf, fiber_link, fiber_conn, fiber_speed, \
-        cooper_lprf, copper_link, copper_conn, copper_speed in info:
-        if item == "%s %s" % (index, name):
-            state, state_readable = mappings["led"][led]
-            yield state, "LED: %s" % state_readable
+    for name, power_led, index, \
+        fiber_lprf, fiber_link, fiber_connector, fiber_speed, \
+        cooper_lprf, copper_link, copper_connector, copper_speed in info:
+        if item == index:
+            state, state_readable = mappings["power_led"][power_led]
+            yield state, "Power status: %s" % state_readable
 
-            for what, lprf, link, speed in [
-                ("FIBER",  fiber_lprf,  fiber_link,  fiber_speed),
-                ("COPPER", cooper_lprf, copper_link, copper_speed)]:
+            for what, lprf, link, speed, connector in [
+                ("Fiber",  fiber_lprf,  fiber_link,  fiber_speed,  fiber_connector),
+                ("Copper", cooper_lprf, copper_link, copper_speed, copper_connector)]:
 
-                yield 0, "%s Speed: %s" % (what, get_nic_speed_human_readable(float(speed)))
+                yield 0, "%s Speed: %s" % (what, mappings["speed"][speed])
 
                 for what_state, what_key in [
                     (lprf, "LPRF"), (link, "Link")]:
                     state, state_readable = mappings["%s_%s" % (what.lower(), what_key.lower())][what_state]
                     yield state, "%s: %s" % (what_key, state_readable)
+
+                yield 0, "Connector: %s" % mappings["%s_connector" % what.lower()][connector]
