@@ -29,6 +29,8 @@
 # .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.2.1.2 2 --> PERLE-MCR-MGT-MIB::mcrChassisSlotIndex.1.2
 # .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.3.1.1 PerleMC01 --> PERLE-MCR-MGT-MIB::mcrUserDefinedModuleName.1.1
 # .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.3.1.2 CM-1000-SFP --> PERLE-MCR-MGT-MIB::mcrUserDefinedModuleName.1.2
+# .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.4.1.1 MCR-MGT --> PERLE-MCR-MGT-MIB::mcrModuleModelName.1.1
+# .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.4.1.2 CM-1000-SFP --> PERLE-MCR-MGT-MIB::mcrModuleModelName.1.2
 # .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.6.1.1 101-693515M10019 --> PERLE-MCR-MGT-MIB::mcrModuleSerialNumber.1.1
 # .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.6.1.2 102-094710M10033 --> PERLE-MCR-MGT-MIB::mcrModuleSerialNumber.1.2
 # .1.3.6.1.4.1.1966.21.1.1.1.1.3.1.7.1.1 01.01.0004 --> PERLE-MCR-MGT-MIB::mcrModuleBootloaderVersion.1.1
@@ -44,39 +46,40 @@
 
 
 def inventory_perle_chassis_slots(info):
-    return [ ("%s %s" % (line[0], line[1]), None) for line in info
-             if line[-1] != "0" ]
+    return [ (index, None)
+             for index, name, modelname, serial, bootloader, fw, \
+             alarms_str, diagstate, ty, descr in info if ty != "0" ]
 
 
 def check_perle_chassis_slots(item, _no_params, info):
-    map_diagstates = {
-        "0" : (0, "passed"),
-        "1" : (2, "media converter module's PHY is not functional"),
-        "2" : (1, "firmware download required"),
-    }
+    map_diagstates = { "0" : (0, "passed"),
+                       "1" : (2, "media converter module's PHY is not functional"),
+                       "2" : (1, "firmware download required"), }
 
-    for index, name, serial, bootloader, fw, \
-        alarms_str, diagstate, ty in info:
-        if item == "%s %s" % (index, name):
+    for index, name, modelname, serial, bootloader, fw, \
+        alarms_str, diagstate, ty, descr in info:
+        if item == index:
             state, state_readable = map_diagstates[diagstate]
-            yield state, "Diagnostic result: %s" % state_readable
+            yield state, "[%s] Diagnostic result: %s" % (name, state_readable)
             yield perle_check_alarms(alarms_str)
 
 
 check_info['perle_chassis_slots'] = {
     'inventory_function'    : inventory_perle_chassis_slots,
     'check_function'        : check_perle_chassis_slots,
-    'service_description'   : 'Chassis slot %s',
+    'service_description'   : 'Chassis status slot %s',
     # If you change snmp info please adapt the related inventory plugin
     'snmp_info'             : ('.1.3.6.1.4.1.1966.21.1.1.1.1.3.1', [
                                     '2',    # PERLE-MCR-MGT-MIB::mcrChassisSlotIndex
-                                    '3',    # PERLE-MCR-MGT-MIB::mcrrDefinedModuleName
+                                    '3',    # PERLE-MCR-MGT-MIB::mcrDefinedModuleName
+                                    '4',    # PERLE-MCR-MGT-MIB::mcrModuleModelName
                                     '6',    # PERLE-MCR-MGT-MIB::mcrModuleSerialNumber
                                     '7',    # PERLE-MCR-MGT-MIB::mcrModuleBootloaderVersion
                                     '8',    # PERLE-MCR-MGT-MIB::mcrModuleFirmwareVersion
                                     '9',    # PERLE-MCR-MGT-MIB::mcrModuleoOutStandWarnAlarms
                                     '10',   # PERLE-MCR-MGT-MIB::mcrModuleDiagStatus
                                     '11',   # PERLE-MCR-MGT-MIB::mcrModuleTypeInserted
+                                    '19',   # PERLE-MCR-MGT-MIB::mcrModuleModelDesc
                               ]),
     'snmp_scan_function'    : perle_scan_function,
     'includes'              : [ 'perle.include' ],
