@@ -1,55 +1,0 @@
-#!/usr/bin/python
-# -*- encoding: utf-8; py-indent-offset: 4 -*-
-# +------------------------------------------------------------------+
-# |             ____ _               _        __  __ _  __           |
-# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
-# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
-# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
-# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
-# |                                                                  |
-# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
-# +------------------------------------------------------------------+
-#
-# This file is part of Check_MK.
-# The official homepage is at http://mathias-kettner.de/check_mk.
-#
-# check_mk is free software;  you can redistribute it and/or modify it
-# under the  terms of the  GNU General Public License  as published by
-# the Free Software Foundation in version 2.  check_mk is  distributed
-# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
-# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
-# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
-# tails. You should have  received  a copy of the  GNU  General Public
-# License along with GNU Make; see the file  COPYING.  If  not,  write
-# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
-# Boston, MA 02110-1301 USA.
-
-
-# .1.3.6.1.4.1.1966.21.1.1.1.1.4.5.1.1.2.1.1 1 --> PERLE-MCR-MGT-MIB::mcrMgtSlotIndex.1.1
-# .1.3.6.1.4.1.1966.21.1.1.1.1.4.5.1.1.3.1.1 MCR-MGT --> PERLE-MCR-MGT-MIB::mcrMgtModelName.1.1
-# .1.3.6.1.4.1.1966.21.1.1.1.1.4.5.3.1.4.1.1 0 --> PERLE-MCR-MGT-MIB::mcrMgtLedALM.1.1
-
-
-def inv_perle_modules_mgt(info):
-    node = inv_tree_list("hardware.components.modules:")
-    for index, name, descr, status in info:
-        node.append({
-            "index"       : index,
-            "model"       : name,
-            "name"        : "%s %s" % (index, name),
-            "description" : descr,
-        })
-
-
-inv_info['perle_modules_mgt'] = {
-    'inv_function'          : inv_perle_modules_mgt,
-    # If you change snmp info please adapt the related check plugin
-    'snmp_info'             : ('.1.3.6.1.4.1.1966.21.1.1.1.1.4.5', [
-                                    "1.1.2",    # PERLE-MCR-MGT-MIB::mcrMgtSlotIndex
-                                    "1.1.3",    # PERLE-MCR-MGT-MIB::mcrMgtModelName
-                                    "1.1.4",    # PERLE-MCR-MGT-MIB::mcrMgtModelDesc
-                                    "3.1.4",    # PERLE-MCR-MGT-MIB::mcrMgtLedALM
-                              ]),
-    'snmp_scan_function'    : perle_scan_function,
-    'includes'              : [ 'perle.include' ],
-}
