@@ -86,6 +86,8 @@
     * 4343 FIX: apt: Fixed wrong state information of pending updates of normal and security updates...
     * 4344 FIX: lnx_quota: Fixed wrong value calculation and removed performance data...
             NOTE: Please refer to the migration notes!
+    * 4335 FIX: perle check and inventory plugins: some updates and improvements...
+            NOTE: Please refer to the migration notes!
 
     Multisite:
     * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
